objects/Group__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LostOppURL__c</fullName>
        <label>LostOppURL</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LostTotal__c</fullName>
        <label>LostTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Additional_Notes__c</fullName>
        <label>Lost Reason Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Detail__c</fullName>
        <label>Lost Reason Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppTotalString__c</fullName>
        <formula>IF(  OppTotal__c   &lt; 0, &quot;(&quot;, &quot;&quot;)  &amp;
IF(ABS(OppTotal__c) &gt;= 1000000, TEXT(FLOOR(ABS(OppTotal__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(OppTotal__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(OppTotal__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(OppTotal__c))), 3) &amp;

IF(OppTotal__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppTotalString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppTotal__c</fullName>
        <label>OppTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubTotalString__c</fullName>
        <formula>IF(  SubTotal__c   &lt; 0, &quot;(&quot;, &quot;&quot;)  &amp;
IF(ABS(SubTotal__c) &gt;= 1000000, TEXT(FLOOR(ABS(SubTotal__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(SubTotal__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(SubTotal__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(SubTotal__c))), 3) &amp;

IF(SubTotal__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubTotalString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>hasLicenses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only used in the UI in mtestOne.html and findLinks.cls</description>
        <label>hasLicenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasOpen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only used in the UI in mtestOne.html and findLinks.cls</description>
        <label>hasOpen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>showHasLost__c</fullName>
        <label>showHasLost</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>